# demolition

./: README.md  background.js  content.js  manifest.json  netflix.js  nuke.css  popup.css  popup.html  popup.js  roblox.js  rules.json  vim.js  youtube.js  ytmusic.js
_metadata/generated_indexed_rulesets/: _ruleset1  _ruleset2
rules/: core-privacy.json
tools/: build-rules.ps1
tools/filter-compiler-rs/: Cargo.toml  THIRD_PARTY_NOTICES.md
tools/filter-compiler-rs/docs/: adblock-rust-mapping.md
tools/filter-compiler-rs/src/: dnr.rs  dnr_adapter.rs  main.rs  parser.rs  prioritize.rs
tools/filter-compiler-rs/tests/: compiler_golden.rs
tools/filter-compiler-rs/tests/fixtures/: basic.abp  basic.native.expected.json
