[package]
name = "filter-compiler-rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
adblock-bridge = ["dep:adblock"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
adblock = { version = "0.12.1", optional = true }
